[修改]1. 修改命令

--- a/ProtoExport/Properties/launchSettings.json
+++ b/ProtoExport/Properties/launchSettings.json
@@ -2,15 +2,15 @@
   "profiles": {
     "ProtoServerToolsApp": {
       "commandName": "Project",
-      "commandLineArgs": "-m server --i ./../../../../../Protobuf -o ./../../../../../Server/GameFrameX.Proto/Proto -n GameFrameX.Proto.Proto"
+      "commandLineArgs": "-m server -i ./../../../../../Protobuf -o ./../../../../../Server/GameFrameX.Proto/Proto -n GameFrameX.Proto.Proto"
     },
     "ProtoUnityToolsApp": {
       "commandName": "Project",
-      "commandLineArgs": "-m unity --i ./../../../../../Protobuf -o ./../../../../../Unity/Assets/Hotfix/Proto -n Hotfix.Proto"
+      "commandLineArgs": "-m unity -i ./../../../../../Protobuf -o ./../../../../../Unity/Assets/Hotfix/Proto -n Hotfix.Proto"
     },
     "ProtoTypeScriptToolsApp": {
        "commandName": "Project",
-       "commandLineArgs":"-m typescript --i ./../../../../../Protobuf -o ./../../../../../Laya/src/gameframex/protobuf -n ''"
+       "commandLineArgs":"-m typescript -i ./../../../../../Protobuf -o ./../../../../../Laya/src/gameframex/protobuf -n ''"
      }
   }
 }
