--- a/ProtoExport/ProtoExport.csproj
+++ b/ProtoExport/ProtoExport.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
     <RootNamespace>GameFrameX.ProtoExport</RootNamespace>
     <TargetFramework>net8.0</TargetFramework>
 
