--- a/ProtoExport/Properties/launchSettings.json
+++ b/ProtoExport/Properties/launchSettings.json
@@ -2,15 +2,15 @@
   "profiles": {
     "ProtoServerToolsApp": {
       "commandName": "Project",
-      "commandLineArgs": "-m server -i ./../../../../../Protobuf -o ./../../../../../Server/GameFrameX.Proto/Proto -n GameFrameX.Proto.Proto"
+      "commandLineArgs": "-mode server -inputPath ./../../../../../Protobuf -outputPath ./../../../../../Server/GameFrameX.Proto/Proto -n GameFrameX.Proto.Proto -isGenerateErrorCode true"
     },
     "ProtoUnityToolsApp": {
       "commandName": "Project",
-      "commandLineArgs": "-m unity -i ./../../../../../Protobuf -o ./../../../../../Unity/Assets/Hotfix/Proto -n Hotfix.Proto"
+      "commandLineArgs": "-mode unity -inputPath ./../../../../../Protobuf -outputPath ./../../../../../Unity/Assets/Hotfix/Proto -n Hotfix.Proto -isGenerateErrorCode true"
     },
     "ProtoTypeScriptToolsApp": {
        "commandName": "Project",
-       "commandLineArgs":"-m typescript -i ./../../../../../Protobuf -o ./../../../../../Laya/src/gameframex/protobuf -n ''"
+       "commandLineArgs":"-mode typescript -inputPath ./../../../../../Protobuf -outputPath ./../../../../../Laya/src/gameframex/protobuf -n '' -isGenerateErrorCode true"
      }
   }
 }
